# ComputerVision

./: .data1.txt.swp  .gitignore  LICENSE  README.md  data1.txt  paste_notebook.ipynb  pyproject.toml
Charts/: industry_counts_x3.html  industry_totals_x3.html
computervision/: train.py
computervision/data/: data_modules.py  pre_processing.py  pre_processor.py
computervision/lightning_modules/: backbones.py  classifier.py
computervision/utils/: config_utils.py  misc_utils.py
notebooks/: Untitled.ipynb  notebook.ipynb
scripts/: run_experiments.py
tests/: test_train.py
tests/utils/: config_utils.py
vision/: train.py
vision/data/: data_modules.py
vision/lightning_modules/: classifier.py
vision/utils/: config_utils.py  misc_utils.py
