[tool.poetry]
name = "computervision"
version = "0.1.0"
description = ""
authors = ["Erik Gafni <egafni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
pytorch-lightning = "^1.6.0"
torchvision = "^0.12.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
pytest = "^7.1.1"
torchmetrics = "^0.7.3"
ipdb = "^0.13.9"
jupyterlab = "^3.3.2"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
